<resources>
    <string name="app_name">FindYourLacrosseEvents</string>

    <!-- Back4App Keys -->
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">f6px2oxKez6qwEfpJqrNe8vyR4RJu6Orbq2SGrpB</string>
    <string name="back4app_client_key">6zP3K36taWHmAxRCoVenI7qYmHlSKStFXhqRKrjf</string>

    <string name="cancel">Cancel</string>

    <!-- RequestPermissionsFragment -->
    <string name="permission_explanation">You need to permit this app to access your location to use the \"Event map\" feature.\n
        If no dialog shows up after clicking the button below, you may have to enable access to your location manually in your device settings.</string>
    <string name="permission_button">You have my permission!</string>

    <!-- Menu Items -->
    <string name="map_title">Map of events</string>
    <string name="new_event_title">Add or edit event</string>
    <string name="favorites_title">My Favorites</string>

    <!-- Marker Info -->
    <string name="marker_favorite_unmarked">Long click window to mark as favorite.</string>
    <string name="marker_favorite_marked">Long click window to unmark as favorite.</string>
    <string name="marker_address">Address: %1$s</string>
    <string name="marker_dates">Dates: %1$s to %2$s</string>
    <string name="marker_genders">Genders: %1$s</string>
    <string name="marker_disciplines">Disciplines: %1$s</string>
    <string name="marker_event_type">Event Type: %1$s</string>

    <!-- FilterBottomSheet -->
    <string name="filter_header">Filter shown events</string>
    <string name="filter_search_radius">Show events … km around my location</string>
    <string name="filter_event_name_label">Event name</string>
    <string name="filter_event_dates_start_label">Show events from…</string>
    <string name="filter_event_dates_end_label">Show events until…</string>
    <string name="filter_genders_label">Genders:</string>
    <string name="filter_discipline_label">Discipline:</string>
    <string name="filter_type_label">Event type:</string>

    <!-- AddOrEditFragment -->
    <string name="add_edit_info">You can either edit the data for an existing event or create a completely new event.</string>
    <string name="add_edit_button_add">Add new event</string>
    <string name="add_edit_button_show_password">Edit existing event</string>
    <string name="add_edit_password">Password for the event</string>
    <string name="add_edit_button_edit">Edit</string>
    <string name="add_edit_password_empty">Cannot be empty</string>

    <!-- EditEventFragment -->
    <string name="edit_event_introduction">Please edit the data of your event.</string>
    <string name="edit_event_fab_update">Update</string>
    <string name="edit_event_update_successful">Event updated successfully</string>
    <string name="edit_event_update_failed">An unexpected error occurred while updating event. Please contact the developer team.</string>

    <!-- NewEventFragment -->
    <string name="new_event_introduction">Hey! It\'s great that you want to share your event with others from the lacrosse community. To do so please fill in the following data.</string>
    <string name="new_event_name">What\'s the name of your event?</string>
    <string name="new_event_address">What is the address of your event?</string>
    <string name="new_event_address_check">Please confirm your event\'s full address.</string>
    <string name="new_event_start">Start date</string>
    <string name="new_event_end">End date</string>
    <string name="new_event_genders_label">What genders is your event for?</string>
    <string name="new_event_discipline_label">What disciplines are being played at your event?</string>
    <string name="new_event_event_type_label">What type of event are you planning?</string>
    <string name="new_event_start_dialog">What is the first day of your event?</string>
    <string name="new_event_end_dialog">What is the last day of your event?</string>
    <string name="new_event_validate_address">Validate address</string>
    <string name="new_event_create">Finish</string>
    <string name="new_event_save_successful">Event created successfully.</string>
    <string name="new_event_save_failed">An unexpected error occurred while creating event. Please contact the developer team.</string>
    <string name="new_event_values_required">Please fill out all form fields.</string>
    <string name="new_event_dialog_title">Choose a password</string>
    <string name="new_event_dialog_info">With this password you can later edit your event\'s data or delete it completely.</string>
    <string name="new_event_dialog_password">Password</string>
    <string name="new_event_dialog_password_confirm">Confirm password</string>
    <string name="new_event_dialog_passwords_unequal">Passwords have to be the same</string>

    <!-- FavoritesFragment -->
    <string name="favorites_info">These are all the events you marked as favorite.</string>
    <string name="favorites_address">Address:</string>
    <string name="favorites_dates">Dates:</string>
    <string name="favorites_dates_value">%1$s to %2$s</string>
    <string name="favorites_event_type">Event Type:</string>
    <string name="favorites_genders">Genders:</string>
    <string name="favorites_disciplines">Disciplines:</string>
    <string name="favorites_reload">PLEASE RELOAD THIS PAGE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>