<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MapFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/mapFragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            map:uiCompass="true" />

        <LinearLayout
            android:id="@+id/filter_bottom_sheet"
            style="@style/Widget.Material3.BottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:behavior_hideable="false"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <TextView
                android:id="@+id/filter_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/default_margin"
                android:text="@string/filter_header"
                android:textSize="24sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/filter_search_radius_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:hint="@string/filter_search_radius"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/filter_search_radius_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/filter_event_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/filter_search_radius_til"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:hint="@string/filter_event_name_label"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/filter_event_name_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:id="@+id/filter_event_dates_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/filter_event_name"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/filter_event_dates_start"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/filter_event_dates_start_label"
                            app:endIconMode="clear_text">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/filter_event_dates_start_et"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/filter_event_dates_end"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/default_margin"
                            android:layout_weight="1"
                            android:hint="@string/filter_event_dates_end_label"
                            app:endIconMode="clear_text">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/filter_event_dates_end_et"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/filter_genders_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/filter_event_dates_container"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/filter_genders_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/filter_genders_label" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/filter_genders"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/filter_discipline_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/filter_genders_container"
                        android:layout_marginStart="@dimen/default_margin"
                        android:layout_marginTop="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/filter_discipline_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/filter_discipline_label" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/filter_disciplines"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/filter_event_type_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/filter_discipline_container"
                        android:layout_margin="@dimen/default_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/filter_event_type_label"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/filter_type_label" />

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/filter_event_types"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</FrameLayout>